Revert "Fix hackathon mobile (#351)" (#354)
This reverts commit bf858966151fbb530d7e5a317c81254be6bc8c8b.

--- a/src/reset.scss
+++ b/src/reset.scss
@@ -10,7 +10,3 @@ a {
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 }
-
-html {
-	font-size: 62.5%;
-}
